; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/enc/extr_backward_references_enc.c_VP8LGetBackwardReferences.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/enc/extr_backward_references_enc.c_VP8LGetBackwardReferences.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @VP8LGetBackwardReferences(i32 %0, i32 %1, i32* %2, i32 %3, i32 %4, i32 %5, i32* %6, i32* %7, i32* %8, i32* %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  store i32 %0, i32* %12, align 4
  store i32 %1, i32* %13, align 4
  store i32* %2, i32** %14, align 8
  store i32 %3, i32* %15, align 4
  store i32 %4, i32* %16, align 4
  store i32 %5, i32* %17, align 4
  store i32* %6, i32** %18, align 8
  store i32* %7, i32** %19, align 8
  store i32* %8, i32** %20, align 8
  store i32* %9, i32** %21, align 8
  %22 = load i32, i32* %16, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %32

24:                                               ; preds = %10
  %25 = load i32, i32* %12, align 4
  %26 = load i32, i32* %13, align 4
  %27 = load i32*, i32** %14, align 8
  %28 = load i32*, i32** %18, align 8
  %29 = load i32*, i32** %19, align 8
  %30 = load i32*, i32** %20, align 8
  %31 = call i32* @GetBackwardReferencesLowEffort(i32 %25, i32 %26, i32* %27, i32* %28, i32* %29, i32* %30)
  store i32* %31, i32** %11, align 8
  br label %43

32:                                               ; preds = %10
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* %13, align 4
  %35 = load i32*, i32** %14, align 8
  %36 = load i32, i32* %15, align 4
  %37 = load i32, i32* %17, align 4
  %38 = load i32*, i32** %18, align 8
  %39 = load i32*, i32** %19, align 8
  %40 = load i32*, i32** %20, align 8
  %41 = load i32*, i32** %21, align 8
  %42 = call i32* @GetBackwardReferences(i32 %33, i32 %34, i32* %35, i32 %36, i32 %37, i32* %38, i32* %39, i32* %40, i32* %41)
  store i32* %42, i32** %11, align 8
  br label %43

43:                                               ; preds = %32, %24
  %44 = load i32*, i32** %11, align 8
  ret i32* %44
}

declare dso_local i32* @GetBackwardReferencesLowEffort(i32, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32* @GetBackwardReferences(i32, i32, i32*, i32, i32, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
